# CUDA-PointPillars

./: CMakeLists.txt
model/: pointpillar.onnx
model/cicv/: pointpillar_2024track1.yaml  pointpillar_2024track1_modify_pcrange.yaml
tool/: build_trt_engine.sh  modify_onnx.py
